--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ opacity: 480%;
 
 
 
+
 }
 /* 
 section resposive started */
@@ -238,7 +239,6 @@ align-items: center;
 
 
 .main-items{
-border: 2px solid red;
 width: 46%;
 
 
@@ -307,16 +307,18 @@ color: var(--whit);
 
 
 }
-
-
+input[type="email"] {
+    color:var(--whit); 
+ 
+}
 .saerch-btn{
-  width: 30%;
  font-family: "Rubik", sans-serif;
   font-optical-sizing: auto;
   font-weight:800;
   font-style: normal;
-padding: 21px 19px;
-font-size: 1.5rem;
+padding: 12px 19px;
+padding-bottom: 16px;
+font-size: 2.1rem;
 margin: 3px;
 background-color: var(--red);
 border: none;
@@ -332,7 +334,8 @@ cursor: pointer;
 }
 
 .simple-arrow{
-font-weight: 400;
+font-weight:400;
+font-size: 2.5rem;
 
 }
 
@@ -356,6 +359,17 @@ font-size: 70%;
 
 
 }
+
+.container{
+background-size: cover;
+background-repeat: no-repeat;
+
+
+
+}
+
+
+
 .saerch-heading{
 text-align: center;
 
@@ -379,12 +393,7 @@ width: 80%;
 
 
 }
-.saerch-btn{
-width: 30%;
 
-
-
-}
 
 
 
@@ -403,6 +412,14 @@ font-size: 60%;
 
 
 }
+.container{
+background-size: cover;
+background-repeat: no-repeat;
+
+
+
+}
+
 .saerch-heading{
 text-align: center;
 
@@ -449,6 +466,14 @@ text-align: center;
 
 
 }
+.container{
+background-size: cover;
+background-repeat: no-repeat;
+
+
+
+}
+
 .saerch-paratwo{
 text-align: center;
 
@@ -466,13 +491,8 @@ width: 80%;
 
 }
 
-.saerch-btn{
+flex-direction: column;
 align-items: center;
-
-
-
-
-}
 
 
 
@@ -492,6 +512,14 @@ text-align: center;
 
 
 }
+.container{
+background-size: cover;
+background-repeat: no-repeat;
+
+
+
+}
+
 
 
 .saerch-paratwo{
@@ -511,8 +539,8 @@ width: 80%;
 
 }
 .saerch-btn{
+flex-direction: column;
 align-items: center;
-
 
 }
 
