--- a/style.css
+++ b/style.css
@@ -590,6 +590,7 @@ flex-wrap: wrap;
 
 }
 .movie-card{
+
 position: relative;
 top: 100px;
 
@@ -602,8 +603,10 @@ top: 100px;
 
 .movie-card{
       position: relative;
+        display: flex;
+  align-items: center;
       background-color:var(--black);
-      width: 80%;
+      width: 100%;
       max-width:299px;
       border-radius: 10px;
       overflow: hidden;
@@ -622,7 +625,7 @@ top: 100px;
       font-weight: bold;
       color:var(--black);
       -webkit-text-stroke: 4px var(--whit) ;
-      text-stroke: 2px #444;
+      text-stroke: 2px  var(--black)  ;
       flex-shrink: 0;
       padding-left: 20px;
       opacity: 0.3;
@@ -630,12 +633,12 @@ top: 100px;
     }
 
     .posterone{
-      width: 80%;
+      width: 100%;
       min-width: 150px;
       object-fit: cover;
       z-index: 2;
       border-left: 2px solid #000;
-                height:34vh;
+      height:34vh;
  
     }
 
@@ -686,11 +689,12 @@ top: 100px;
 
 
     @media (max-width: 1024px) {
-    
+
 .container-for-trending-cards{
 display: flex;
-justify-content: center;
 align-items: center;
+gap: 30px;
+flex-wrap: wrap;
 
 
 
@@ -700,11 +704,7 @@ align-items: center;
 
 
 
-
-
-
-
-
+    
       .big-number {
         font-size: 6rem;
         padding: 10px;
@@ -712,21 +712,65 @@ align-items: center;
 
       .posterone {
         width: 100%;
+        height: 55vh;
        
       }
        .postertwo {
         width: 100%;
+                height: 55vh;
       }
        .posterthree {
         width: 100%;
+                height: 55vh;
       }
        .posterfour {
         width: 100%;
+                height: 55vh;
       }
     }
 
 
 
+    @media (max-width: 1024px) {
+
+.container-for-trending-cards{
+display: flex;
+align-items: center;
+gap: 30px;
+flex-wrap: wrap;
+
+
+
+
+
+}
+
+
+
+    
+      .big-number {
+        font-size: 6rem;
+        padding: 10px;
+      }
+
+      .posterone {
+        width: 100%;
+        height: 55vh;
+       
+      }
+       .postertwo {
+        width: 100%;
+                height: 55vh;
+      }
+       .posterthree {
+        width: 100%;
+                height: 55vh;
+      }
+       .posterfour {
+        width: 100%;
+                height: 55vh;
+      }
+    }
 
 
 
@@ -783,6 +827,11 @@ flex-wrap: wrap;
         width: 100%;
       }
     }
+
+
+
+
+
 
 
 
@@ -897,7 +946,41 @@ flex-wrap: wrap;
       }
     }
 
-    @media (max-width: 375px) {
+
+  @media (max-width: 360px) {
+
+
+  .posterone {
+        width: 100%;
+        height: 54vh !important ;
+              
+      }
+        .postertwo{
+        width: 100%;
+        height: 54vh !important ;
+              
+      }
+        .posterthree {
+        width: 100%;
+        height: 54vh !important ;
+              
+      }
+
+
+
+       .posterfour{
+        width: 100%;
+        height: 54vh !important ;
+              
+      }
+    }
+
+
+
+
+
+
+  @media (max-width: 375px) {
 .container-for-trending-cards{
 display: flex;
 justify-content: center;
@@ -919,19 +1002,113 @@ flex-wrap: wrap;
 
       .posterone {
         width: 100%;
+                width: 100%;
+        height: 54vh;
       
     
       }
        .postertwo {
           width: 100%;
+                  width: 100%;
+        height: 54vh;
          
       }
        .posterthree {
         width: 100%;
-    
+            width: 100%;
+        height: 54vh;
       }
        .posterfour {
         width: 100%;
+        height: 54vh;
               
       }
     }
+
+
+
+
+
+
+
+
+
+  
+
+    @media (max-width: 390px) {
+
+
+  
+       .posterfour {
+        width: 100%;
+        height: 47vh  !important  ;
+              
+      }
+    }
+
+    @media (max-width: 414px) {
+
+
+  
+       .posterfour {
+        width: 100%;
+        height: 60vh;
+              
+      }
+    }
+
+  @media (max-width: 440px) {
+
+
+  
+       .posterfour {
+        width: 100%;
+        height: 66vh;
+              
+      }
+    }
+
+
+  @media (max-width: 540px) {
+
+
+  
+       .posterfour {
+        width: 100%;
+        height: 76vh;
+              
+      }
+    }
+
+
+
+
+
+  
+  @media (max-width: 1280px) {
+
+.posterone {
+        width: 100%;
+        height: 60vh !important ;
+              
+      }
+      .postertwo {
+        width: 100%;
+        height: 60vh !important ;
+              
+      }
+      .posterthree {
+        width: 100%;
+        height: 60vh !important ;
+              
+      }
+  
+       .posterfour {
+        width: 100%;
+        height: 60vh !important ;
+              
+      }
+    }
+
+
+
