--- a/style.css
+++ b/style.css
@@ -619,7 +619,7 @@ top: 100px;
         display: flex;
   align-items: center;
       background-color:var(--black);
-      width: 100%;
+      width: 80%;
       max-width:299px;
       border-radius: 10px;
       overflow: hidden;
@@ -644,8 +644,14 @@ top: 100px;
       opacity: 0.3;
       z-index: 1;
     }
+        .movie-card:hover {
+      transform: scale(1.1);
+      z-index: 5;
+      box-shadow: 0 15px 30px rgba(255, 255, 255, 0.2);
+    }
 
-    .posterone{
+
+    .poster{
       width: 100%;
       min-width: 150px;
       object-fit: cover;
@@ -655,47 +661,13 @@ top: 100px;
  
     }
 
-    .movie-card:hover {
-      transform: scale(1.1);
-      z-index: 5;
-      box-shadow: 0 15px 30px rgba(255, 255, 255, 0.2);
-    }
 
 
 
-   .postertwo{
-      width: 80%;
-      min-width: 150px;
-      object-fit: cover;
-      z-index: 2;
-      border-left: 2px solid var(--black);
-      height:34vh;
+   
 
-
-
-
-    }
-
-       .posterthree{
-      width: 80%;
-      min-width: 150px;
-      object-fit: cover;
-      z-index: 2;
-      border-left: 2px solid  var(--black);
-            height:34vh;
-
-    }
-
-       .posterfour{
-      width: 80%;
-      min-width: 150px;
-      object-fit: cover;
-      z-index: 2;
-      border-left: 2px solid var(--black);
-              height:34vh;
-     
-
-    }
+  
+  
 
 
 
@@ -719,19 +691,38 @@ font-size: 3.7rem;
 /* section cards ended */
   
 
-
-
-
 /* section cards responcive  started */
 
-    @media (max-width: 1024px) {
 
-.container-for-trending-cards{
-display: flex;
-align-items: center;
-gap: 30px;
-flex-wrap: wrap;
+@media (max-width: 1024px) { 
+  
+  .movie-card {
+    flex: 1 1 100%;
+  }
+  .poster{
+  width: 100%;
+    height: 250px;
 
+
+
+
+}
+
+}
+
+
+
+
+
+
+@media (max-width: 1200px) { 
+  
+  .movie-card {
+    flex: 1 1 100%;
+  }
+  .poster{
+  width: 100%;
+    height: 250px;
 
 
 
@@ -739,411 +730,55 @@ flex-wrap: wrap;
 }
 
 
+}
+@media (max-width: 992px) {  
 
+  .movie-card {
+    flex: 1 1 100%;
+  }
+  .poster{
+  width: 100%;
+    height: 250px;
+
+
+
+
+}
+
+
+ }
+@media (max-width: 768px) {  
+
+  .movie-card {
+    flex: 1 1 100%;
     
-      .big-number {
-        font-size: 6rem;
-        padding: 10px;
-      }
-
-      .posterone {
-        width: 100%;
-        height: 55vh;
-       
-      }
-       .postertwo {
-        width: 100%;
-                height: 55vh;
-      }
-       .posterthree {
-        width: 100%;
-                height: 55vh;
-      }
-       .posterfour {
-        width: 100%;
-                height: 55vh;
-      }
-
-
-.cards-heading{
-font-size: 2.7rem;
-
-}
-
-
-
-    }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    @media (max-width:935px) {
-  
-.container-for-trending-cards{
-display: flex;
-justify-content: center;
-align-items: center;
-gap: 30px;
-flex-wrap: wrap;
-
+  }
+.poster{
+  width: 100%;
+    height: 250px;
 
 
 
 
 }
 
-      .big-number {
-        font-size: 6rem;
-        padding: 10px;
-      }
-
-      .posterone {
-        width: 100%;
-      }
-       .postertwo {
-        width: 100%;
-      }
-       .posterthree {
-        width: 100%;
-      }
-       .posterfour {
-        width: 100%;
-      }
-      .cards-heading{
-font-size: 2.7rem;
-
-}
-    }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    @media (max-width: 778px) {
-    .container-for-trending-cards{
-display: flex;
-justify-content: center;
-align-items: center;
-gap: 30px;
-flex-wrap: wrap;
-
+ }
+@media (max-width: 576px) {
+  .movie-card {
+    flex: 1 1 100%;
+  }
+.poster{
+  width: 100%;
+    height: 250px;
 
 
 
 
 }
 
-      .big-number {
-        font-size: 6rem;
-        padding: 10px;
-      }
-
-      .posterone {
-        width: 100%;
-      }
-       .postertwo {
-        width: 100%;
-      }
-       .posterthree {
-        width: 100%;
-      }
-       .posterfour {
-        width: 100%;
-      }
-      .cards-heading{
-font-size: 2.7rem;
-
-}
-    }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    @media (max-width: 600px) {
- .container-for-trending-cards{
-display: flex;
-justify-content: center;
-align-items: center;
-gap: 30px;
-flex-wrap: wrap;
-
-
-
-
-
-}
-
-
-
-
-      .big-number {
-        font-size: 6rem;
-        padding: 10px;
-      }
-
-      .posterone {
-        width: 100%;
-    
-      }
-       .postertwo {
-        width: 100%;
-      }
-       .posterthree {
-        width: 100%;
-      }
-       .posterfour {
-        width: 100%;
-              height: 35vh; 
-      }
-      .cards-heading{
-font-size: 2.7rem;
-
-}
-    }
-
-
-  @media (max-width: 360px) {
-
-
-  .posterone {
-        width: 100%;
-        height: 54vh !important ;
-              
-      }
-        .postertwo{
-        width: 100%;
-        height: 54vh !important ;
-              
-      }
-        .posterthree {
-        width: 100%;
-        height: 54vh !important ;
-              
-      }
-
-
-
-       .posterfour{
-        width: 100%;
-        height: 54vh !important ;
-              
-      }
-      .cards-heading{
-font-size: 2.7rem;
-
-}
-    }
-
-
-
-
-
-
-  @media (max-width: 375px) {
-.container-for-trending-cards{
-display: flex;
-justify-content: center;
-align-items: center;
-gap: 30px;
-flex-wrap: wrap;
-
-
-
-
-
-}
-
-
-      .big-number {
-        font-size: 6rem;
-        padding: 10px;
-      }
-
-      .posterone {
-        width: 100%;
-                width: 100%;
-        height: 54vh;
-      
-    
-      }
-       .postertwo {
-          width: 100%;
-                  width: 100%;
-        height: 54vh;
-         
-      }
-       .posterthree {
-        width: 100%;
-            width: 100%;
-        height: 54vh;
-      }
-       .posterfour {
-        width: 100%;
-        height: 54vh;
-              
-      }
-      .cards-heading{
-font-size: 2.7rem;
-
-}
-    }
-
-
-
-
-
-
-
-
-
-  
-
-    @media (max-width: 390px) {
-
-
-  
-       .posterfour {
-        width: 100%;
-        height: 47vh  !important  ;
-              
-      }
-    }
-
-    @media (max-width: 414px) {
-
-
-  
-       .posterfour {
-        width: 100%;
-        height: 60vh;
-              
-      }
-    }
-
-  @media (max-width: 440px) {
-
-
-  
-       .posterfour {
-        width: 100%;
-        height: 66vh;
-              
-      }
-    }
-
-
-  @media (max-width: 540px) {
-
-
-  
-       .posterfour {
-   width: 100%;
-        height: 76vh;
-              
-      }
-      .cards-heading{
-font-size: 2.7rem;
-
-}
-    }
-
-
-
-
-
-  
-  @media (max-width: 1280px) {
-
-.posterone {
-        width: 100%;
-        height: 60vh !important ;
-              
-      }
-      .postertwo {
-        width: 100%;
-        height: 60vh !important ;
-              
-      }
-      .posterthree {
-        width: 100%;
-        height: 60vh !important ;
-              
-      }
-  
-       .posterfour {
-        width: 100%;
-        height: 60vh !important ;
-              
-      }
-      .cards-heading{
-font-size: 2.7rem;
-
-}
-    }
-
-
+   }
 
 
 /* section cards responcive  ended */
+
+
