--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ font-size: 62.5%;
 
 }
 
+body{
+background-color: var(--black);
+
+
+}
+
+
+
 :root{
 --red: #ff0e1a ;
 --whit: #ffffff ;
@@ -580,14 +588,6 @@ width: 100%;
 
 
 
-.section-for-cards{
-height:  400vh;
-
-
-
-
-
-}
 
 
 
@@ -620,7 +620,6 @@ top: 100px;
       position: relative;
         display: flex;
   align-items: center;
-      background-color:var(--black);
       width: 80%;
       max-width:299px;
       border-radius: 10px;
@@ -809,6 +808,7 @@ height: 40vh;
   flex: 1 1 calc(33.33% - 20px);
   box-sizing: border-box;
   height: 30vh;
+
 }
 
 .card i {
@@ -888,3 +888,330 @@ color: var(--whit);
 }
 
 /* section  for join cards responcive  ended */
+
+
+
+
+ /* Frequently Asked Questions started */
+
+
+ .conatiner-for-asked{
+   display: flex;
+    justify-content: center;   
+    align-items: center;      
+    flex-direction: column;  
+    height: 100vh;          
+    gap: 3px;    
+  position: relative;
+ bottom: 120px;
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+label{
+font-size: 3rem;
+color: var(--whit);
+     font-family: "Rubik", sans-serif;
+  font-optical-sizing: auto;
+  font-weight:800;
+  text-align: center;
+     display: block;
+
+
+}
+
+
+select{
+width: 70%;
+padding: 40px 30px;
+     font-family: "Rubik", sans-serif;
+  font-optical-sizing: auto;
+  font-weight:500;
+      white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    box-sizing: border-box;
+}
+
+
+select:hover {
+background-color: var(--gray);
+cursor: pointer;
+}
+
+
+
+option{
+max-width: 100px;
+padding: 30px 30px;
+font-size: 1.2rem;
+ font-family: "Rubik", sans-serif;
+  font-optical-sizing: auto;
+  font-weight:600;
+ 
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+/*  Frequently Asked Questions ended */
+
+
+ @media (max-width: 1024px) {
+select {
+width: 100%;
+position: relative;
+bottom: 480px;
+  }
+
+ .conatiner-for-asked {
+  display: flex;
+ flex-wrap: wrap;
+ position: relative;
+ top: 140px;
+
+
+  
+}
+label{
+position: relative;
+bottom: 480px;
+
+}
+
+}
+
+@media (max-width: 935px) {
+select {
+width: 100%;
+  }
+
+ .conatiner-for-asked {
+  display: flex;
+ flex-wrap: wrap;
+  position: relative;
+ top: 120px;
+
+  
+}
+
+
+}
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+select {
+width: 100%;
+  }
+
+ .conatiner-for-asked {
+  display: flex;
+ flex-wrap: wrap;
+  position: relative;
+ top: 120px;
+
+  
+}
+
+
+}
+
+@media (max-width: 480px) {
+select {
+width: 100%;
+  }
+
+ .conatiner-for-asked {
+  display: flex;
+ flex-wrap: wrap;
+  position: relative;
+ top: 120px;
+
+  
+}
+
+
+}
+
+
+@media (max-width: 375px) {
+select {
+width: 100%;
+position: relative;
+top: 470px;
+  }
+
+
+
+}
+
+
+@media (max-width: 344px) {
+select {
+width: 100%;
+position: relative;
+bottom:30px;
+  }
+
+
+label{
+position: relative;
+top: 1px;
+
+
+}
+
+
+
+ .conatiner-for-asked {
+  display: flex;
+ flex-wrap: wrap;
+  position: relative;
+ top: 180px;
+
+  
+}
+
+
+}
+
+
+
+
+
+
+
+@media (max-width: 344px) {
+select {
+width: 100%;
+position: relative;
+top: 590px;
+  }
+
+ .conatiner-for-asked {
+  display: flex;
+ flex-wrap: wrap;
+  position: relative;
+ top: 180px;
+
+  
+}
+
+
+label{
+position: relative;
+top: 510px !important ;
+
+
+}
+
+
+
+
+
+}
+
+
+@media (max-width: 430px) {
+select {
+width: 100%;
+position: relative;
+top: 500px !important ;
+  }
+
+ .conatiner-for-asked {
+  display: flex;
+ flex-wrap: wrap;
+  position: relative;
+ top: 180px;
+
+  
+}
+
+
+label{
+position: relative;
+top: 530px;
+
+
+}
+
+
+
+
+
+}
+
+
+
+
+
+
+
+
+@media (max-width: 540px) {
+select {
+width: 100%;
+position: relative;
+bottom:30px;
+  }
+
+
+label{
+position: relative;
+top: 1px;
+
+
+}
+
+
+
+ .conatiner-for-asked {
+  display: flex;
+ flex-wrap: wrap;
+  position: relative;
+ top: 180px;
+
+  
+}
+
+
+}
+
+
+
+
+
